# Mini-Go-Compiler

./: CMakeLists.txt  GRAMATICA.md  README.md  lexer.cpp  lexer.dot.gv  lexer.hpp  lexer.l  main.cpp  parser.cpp  parser.hpp
examples/: boolean.txt  fibonacci.txt  global.txt  swap.txt
examples/test/: err10.txt  err11.txt  err12.txt  err2.txt  err3.txt  err4.txt  err5.txt  err7.txt  err8.txt  err9.txt
include/: parser.hpp  tree.hpp  visitor.hpp
include/enums/: NodeKind.hpp  relational.hpp  type.hpp  unary.hpp
src/: lexer.cpp  main.cpp  parser.cpp  parser.hpp  tree.cpp  visitor.cpp
